Partマスタを実装 部品名の誤入力と重複を防ぐため、プルダウン方式に変更